// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select single element on the scene arrow 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      15,
      25,
    ],
    Array [
      30,
      50,
    ],
  ],
  "roughness": 1,
  "seed": 337897,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#000000",
  "strokeSharpness": "round",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "arrow",
  "updated": 1,
  "version": 3,
  "versionNonce": 449462985,
  "width": 30,
  "x": 10,
  "y": 10,
}
`;

exports[`select single element on the scene arrow escape 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      15,
      25,
    ],
    Array [
      30,
      50,
    ],
  ],
  "roughness": 1,
  "seed": 337897,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#000000",
  "strokeSharpness": "round",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "line",
  "updated": 1,
  "version": 3,
  "versionNonce": 449462985,
  "width": 30,
  "x": 10,
  "y": 10,
}
`;

exports[`select single element on the scene diamond 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "diamond",
  "updated": 1,
  "version": 2,
  "versionNonce": 1278240551,
  "width": 30,
  "x": 10,
  "y": 10,
}
`;

exports[`select single element on the scene ellipse 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "ellipse",
  "updated": 1,
  "version": 2,
  "versionNonce": 1278240551,
  "width": 30,
  "x": 10,
  "y": 10,
}
`;

exports[`select single element on the scene rectangle 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 2,
  "versionNonce": 1278240551,
  "width": 30,
  "x": 10,
  "y": 10,
}
`;
